--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
-* {
+.container {
     background-color: blanchedalmond;
-    text-align: center;
+    text-align: left;
+    height: 1200px;
+    width: 500px;
+    align-items: center;
+    padding: 30px;
+    margin: 30px;
+    border: 5px solid black;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 img {
     height: auto;
     width: 200px;
+}
+
+p {
+    font-size: 20px;
 }
