--- a/style.css
+++ b/style.css
@@ -1,20 +1,51 @@
 .container {
     background-color: blanchedalmond;
     text-align: left;
-    height: 1200px;
-    width: 500px;
+    height: 2000px;
+    width: 600px;
     align-items: center;
     padding: 30px;
     margin: 30px;
     border: 5px solid black;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'optima', 'Copperplate' 'Arial Narrow', Arial, sans-serif;
 }
 
 img {
     height: auto;
-    width: 200px;
+    width: 250px;
 }
 
 p {
-    font-size: 20px;
+    font-size: 25px;
+}
+
+.thumbnail {
+    height: auto;
+    width: 150px;
+}
+
+.index {
+    list-style-type: none;
+    padding: 10px;
+    margin: 10px;
+}
+
+li {
+    font-weight: bold;
+    font-size: 22px;
+}
+
+h1 {
+    color: maroon;
+    font-weight: bolder;
+    font-size: 75px;
+    text-shadow: 1px 1px black;
+}
+
+a {
+    color: maroon;
+}
+
+h2 {
+    color: maroon;
 }
