--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     align-items: center;
     padding: 30px;
     margin: 30px auto;
-    border: 5px solid black;
+    border: 5px solid maroon;
     font-family: 'optima', 'Copperplate' 'Arial Narrow', Arial, sans-serif;
 }
 
